[package]
name = "linkedlist-vs-vec"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/linkedlist-vs-vec"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ]}

[[bench]]
name = "my_benchmark"
harness = false
